[project]
name = "physeek"
version = "0.1.0"
description = "Policy-side SDK for remote embodied robot evaluation through SEP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pillow>=9.0",
    "websockets>=10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
physeek = "sdk.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sdk*"]
